--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ boto3==1.16.30
 botocore==1.19.30
 dj-database-url==0.5.0
 Django==3.1.3
+django-ckeditor==6.0.0
+django-js-asset==1.2.2
 django-storages==1.10.1
 gunicorn==20.0.4
 jmespath==0.10.0
